--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
   "description": "Some web services used while teaching at Yrgo",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint -c .eslintrc.cjs --ext .mts netlify/"
   },
   "author": "Hampus Ram <hampus.ram@educ.goteborg.se>",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^7.0.2",
+    "@typescript-eslint/parser": "^7.2.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^48.2.1",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-unicorn": "^51.0.1",
     "netlify-cli": "^17.19.2"
   },
   "dependencies": {
     "@netlify/functions": "^2.6.0",
-    "tslint": "^6.1.3",
     "typescript": "^5.4.2"
   }
 }
