--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"rootDir": "netlify/functions",
 		"outDir": "lib",
 
+		"noEmit": true,
 		"strict": true,
 		"alwaysStrict": true,
 		"strictFunctionTypes": true,
