--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "eslint-plugin-jsdoc": "^48.2.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-unicorn": "^51.0.1",
-    "netlify-cli": "^18.1.0"
+    "netlify-cli": "^18.1.0",
+    "openapi-typescript": "^7.6.1"
   },
   "dependencies": {
     "@netlify/functions": "^2.6.0",
+    "@date-fns/tz": "^1.2.0",
+    "date-fns": "^4.1.0",
     "typescript": "^5.4.2"
   }
 }
